// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple button 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="jsx-780996603 button"
    onClick={[Function]}
  >
    Hello!
  </button>
</div>
`;

exports[`Storyshots ButtonGroup ButtonGroup default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="button-group"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      all
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      medical records
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      prescriptions
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      lab analysis
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      sick list
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      other
    </button>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup ButtonGroup primary 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="button-group button-group-primary"
  >
    <button
      className="button"
      onClick={[Function]}
    >
      male
    </button>
    <button
      className="button"
      onClick={[Function]}
    >
      female
    </button>
  </div>
</div>
`;

exports[`Storyshots Calendar default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-1941811679 calendar"
  >
    <div
      className="jsx-2517886091"
    >
      <div
        className="jsx-56743731 navigation"
      >
        <button
          className="jsx-56743731"
          onClick={[Function]}
        >
          <svg
            aria-label="previous"
            className="grommetux-control-icon grommetux-control-icon-previous grommetux-control-icon--xsmall grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          className="jsx-56743731 navigation__month"
        >
          March
          <span
            className="jsx-56743731"
          >
            ·
          </span>
          2018
        </div>
        <button
          className="jsx-56743731"
          onClick={[Function]}
        >
          <svg
            aria-label="next"
            className="grommetux-control-icon grommetux-control-icon-next grommetux-control-icon--xsmall grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <ul
        className="jsx-2517886091 weekdays"
      >
        <li
          className="jsx-2517886091 weekdays__item"
        >
          Sun
        </li>
        <li
          className="jsx-2517886091 weekdays__item"
        >
          Mon
        </li>
        <li
          className="jsx-2517886091 weekdays__item"
        >
          Tue
        </li>
        <li
          className="jsx-2517886091 weekdays__item"
        >
          Wed
        </li>
        <li
          className="jsx-2517886091 weekdays__item"
        >
          Thu
        </li>
        <li
          className="jsx-2517886091 weekdays__item"
        >
          Fri
        </li>
        <li
          className="jsx-2517886091 weekdays__item"
        >
          Sat
        </li>
      </ul>
    </div>
    <ul
      className="jsx-3342723031 month"
    >
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          25
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          26
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          27
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          28
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          2
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          3
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          4
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          5
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          6
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          7
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          8
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          9
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          10
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          11
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          12
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          13
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          14
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          15
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          16
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          17
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          18
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          19
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          20
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          21
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          22
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          23
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--disabled"
          onClick={[Function]}
          type="button"
        >
          24
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day day--selected"
          onClick={[Function]}
          type="button"
        >
          25
          <ul
            className="jsx-3152833426 events"
          >
            <li
              className="jsx-3152833426 events__item"
            />
            <li
              className="jsx-3152833426 events__item"
            />
            <li
              className="jsx-3152833426 events__item"
            />
          </ul>
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day"
          onClick={[Function]}
          type="button"
        >
          26
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day"
          onClick={[Function]}
          type="button"
        >
          27
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day"
          onClick={[Function]}
          type="button"
        >
          28
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day"
          onClick={[Function]}
          type="button"
        >
          29
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day"
          onClick={[Function]}
          type="button"
        >
          30
        </button>
      </li>
      <li
        className="jsx-3342723031"
      >
        <button
          className="jsx-2185100080 day"
          onClick={[Function]}
          type="button"
        >
          31
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Card simple card 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3439448312 card"
    style={
      Object {
        "padding": "50px",
        "width": "200px",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos libero deserunt soluta.
  </div>
</div>
`;

exports[`Storyshots Datepicker Datepicker 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    htmlFor="datepicker"
  >
    Datepicker
  </label>
  <div>
    <div
      className="react-datepicker-wrapper"
    >
      <div
        className="react-datepicker__input-container"
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="datepicker"
          disabled={false}
          id="datepicker"
          name="name"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          tabIndex={undefined}
          title={undefined}
          type="text"
          value="25 Mar, 2018"
        />
      </div>
    </div>
  </div>
  <style>
    .calendar{background-color:#ffffff;border:none;border-radius:6px;box-shadow:0 2px 40px 0 rgba(0,0,0,0.05);}
    .calendar .react-datepicker__header{border:none;background-color:#ffffff;}
    .calendar .react-datepicker__month{margin-top:0;}
    .calendar .react-datepicker__month-container{padding:10px 20px 20px 20px;}
    .calendar .react-datepicker__current-month{font-size:1rem;margin-bottom:20px;}
    .calendar .react-datepicker__triangle{position:absolute;top:0 !important;left:36px !important;width:0;height:0;margin:0 !important;-webkit-transform-origin:0 0;-ms-transform-origin:0 0;transform-origin:0 0;-webkit-transform:rotate(135deg);-ms-transform:rotate(135deg);transform:rotate(135deg);box-sizing:border-box !important;box-shadow:-4px 4px 14px 0 rgba(0,0,0,0.05) !important;border-width:6px !important;border-style:solid !important;border-color:transparent transparent #ffffff #ffffff !important;}
    .calendar .react-datepicker__triangle:before{content:none !important;}
    .calendar .react-datepicker__navigation{border:none;top:17px;}
    .calendar .react-datepicker__navigation:before{content:'';display:block;width:24px;height:24px;position:absolute;left:-39px;color:#222328;background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' viewBox='0 0 24 24' width='24px' height='24px' role='img' class='grommetux-control-icon grommetux-control-icon-form-next grommetux-control-icon--responsive' aria-label='form-next'%3E%3Cpolyline fill='none' stroke='%23000' stroke-width='2' points='9 6 15 12 9 18'%3E%3C/polyline%3E%3C/svg%3E");background-repeat:no-repeat;font-weight:bold;font-size:1.3rem;}
    .calendar .react-datepicker__navigation--next{right:16px;}
    .calendar .react-datepicker__navigation--previous{left:16px;}
    .calendar .react-datepicker__navigation--previous:before{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);left:18px;}
    .calendar .react-datepicker__day{margin:6px;border-radius:50%;width:24px;height:24px;line-height:24px;color:#2A2A30;font-size:0.75rem;font-weight:400;}
    .calendar .react-datepicker__day:hover:not(.react-datepicker__day--selected){color:#2A2A30;background-color:#eff0f4;}
    .calendar .react-datepicker__day--selected{color:#ffffff;background-color:#0c97f9;}
    .calendar .react-datepicker__day--outside-month{color:#bbbccd;}
    .calendar .react-datepicker__day-name{margin:0 6px;color:#bbbccd;width:24px;height:24px;line-height:24px;text-transform:uppercase;font-size:0.1rem;font-weight:400;}
  </style>
  <style>
    .datepicker{width:100%;padding:12px 16px 12px 52px;color:#2A2A30;font-size:0.875rem;box-sizing:border-box;background-color:#ffffff;background-repeat:no-repeat;background-position:17px center;background-image:url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='19px' height='20px' viewBox='0 0 19 20' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 48 %2847235%29 - http://www.bohemiancoding.com/sketch --%3E%3Ctitle%3Ecalendar%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3Cpath d='M4,4 C3.44771525,4 3,4.44771525 3,5 L3,17 C3,17.5522847 3.44771525,18 4,18 L17,18 C17.5522847,18 18,17.5522847 18,17 L18,5 C18,4.44771525 17.5522847,4 17,4 L4,4 Z M4,2 L17,2 C18.6568542,2 20,3.34314575 20,5 L20,17 C20,18.6568542 18.6568542,20 17,20 L4,20 C2.34314575,20 1,18.6568542 1,17 L1,5 C1,3.34314575 2.34314575,2 4,2 Z M3,7 L18,7 L18,9 L3,9 L3,7 Z M6,0.5 L6,0.5 C6.55228475,0.5 7,0.94771525 7,1.5 L7,5 C7,5.55228475 6.55228475,6 6,6 L6,6 C5.44771525,6 5,5.55228475 5,5 L5,1.5 C5,0.94771525 5.44771525,0.5 6,0.5 Z M15,0.5 L15,0.5 C15.5522847,0.5 16,0.94771525 16,1.5 L16,5 C16,5.55228475 15.5522847,6 15,6 L15,6 C14.4477153,6 14,5.55228475 14,5 L14,1.5 C14,0.94771525 14.4477153,0.5 15,0.5 Z M15.25,13 C15.9403559,13 16.5,12.4403559 16.5,11.75 C16.5,11.0596441 15.9403559,10.5 15.25,10.5 C14.5596441,10.5 14,11.0596441 14,11.75 C14,12.4403559 14.5596441,13 15.25,13 Z M15.25,16.8000002 C15.9403559,16.8000002 16.5,16.2403561 16.5,15.5500002 C16.5,14.8596443 15.9403559,14.3000002 15.25,14.3000002 C14.5596441,14.3000002 14,14.8596443 14,15.5500002 C14,16.2403561 14.5596441,16.8000002 15.25,16.8000002 Z M10.5500002,13 C11.2403561,13 11.8000002,12.4403559 11.8000002,11.75 C11.8000002,11.0596441 11.2403561,10.5 10.5500002,10.5 C9.85964425,10.5 9.30000019,11.0596441 9.30000019,11.75 C9.30000019,12.4403559 9.85964425,13 10.5500002,13 Z M10.5500002,16.8000002 C11.2403561,16.8000002 11.8000002,16.2403561 11.8000002,15.5500002 C11.8000002,14.8596443 11.2403561,14.3000002 10.5500002,14.3000002 C9.85964425,14.3000002 9.30000019,14.8596443 9.30000019,15.5500002 C9.30000019,16.2403561 9.85964425,16.8000002 10.5500002,16.8000002 Z M5.75,13 C6.44035594,13 7,12.4403559 7,11.75 C7,11.0596441 6.44035594,10.5 5.75,10.5 C5.05964406,10.5 4.5,11.0596441 4.5,11.75 C4.5,12.4403559 5.05964406,13 5.75,13 Z M5.75,16.8000002 C6.44035594,16.8000002 7,16.2403561 7,15.5500002 C7,14.8596443 6.44035594,14.3000002 5.75,14.3000002 C5.05964406,14.3000002 4.5,14.8596443 4.5,15.5500002 C4.5,16.2403561 5.05964406,16.8000002 5.75,16.8000002 Z' id='path-1'%3E%3C/path%3E%3C/defs%3E%3Cg id='Icons/Calendar' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' transform='translate%28-1.000000, 0.000000%29'%3E%3Cg id='icon'%3E%3Cmask id='mask-2' fill='white'%3E%3Cuse xlink:href='%23path-1'%3E%3C/use%3E%3C/mask%3E%3Cuse id='calendar' fill='%23cccccc' fill-rule='nonzero' xlink:href='%23path-1'%3E%3C/use%3E%3C/g%3E%3C/g%3E%3C/svg%3E");border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
    .datepicker:focus{outline:none;border-color:#0c97f9;}
  </style>
  <style>
    label{color:#2A2A30;display:block;margin-bottom:6px;font-weight:500;font-size:1rem;}
  </style>
  <style>
    .react-datepicker-wrapper,.react-datepicker__input-container{width:100%;}
  </style>
</div>
`;

exports[`Storyshots TextInput Text input 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-2941157369 jsx-1178708339"
  >
    <label
      className="jsx-2941157369 jsx-1178708339"
      htmlFor="text-input"
    >
      Text input
    </label>
    <input
      className=""
      id="text-input"
      name="name"
      onChange={[Function]}
      placeholder="text input"
      type="text"
      value="example text"
    />
    <style>
      input,textarea{width:100%;min-width:100%;max-width:100%;min-height:44px;padding:12px 16px;background-color:#ffffff;color:#2A2A30;box-sizing:border-box;font-style:normal;font-weight:normal;font-size:0.875rem;border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
      input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#828393;}
      input::-moz-placeholder,textarea::-moz-placeholder{color:#828393;}
      input:-ms-input-placeholder,textarea:-ms-input-placeholder{color:#828393;}
      input:-moz-placeholder,textarea:-moz-placeholder{color:#828393;}
      input:focus,textarea:focus{outline:none;padding:12px 16px;border-color:#0c97f9;}
      input.error,input.error:focus,textarea.error,textarea.error:focus{border-color:#FF5572;}
    </style>
    
  </div>
</div>
`;

exports[`Storyshots Toast simple toast 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-4177506176 box rectangle-22"
  >
    <div
      className="jsx-4177506176 circle"
    />
    <div
      className="jsx-4177506176 message"
    >
      You have a booked appointment..bla bla
    </div>
    <div
      className="jsx-4177506176 icons-close"
    >
      <div
        className="jsx-4177506176 icon"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
